Add functionality with new architecture

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="current_weather">Current Weather</string>
     <string name="weekly_forecast">Weekly Forecast</string>
     <string name="blank_error">The city name can\'t be blank</string>
+    <string name="try_again">Try again</string>
 </resources>
