--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,16 @@
 <resources>
     <string name="app_name">Tempo</string>
     <string name="title">Tempo</string>
-    <string name="city_name">City name</string>
+    <string name="city_name">Search by city name</string>
     <string name="search">Search</string>
     <string name="generic_error">An error has occurred, please try again :( </string>
     <string name="current_weather">Current Weather</string>
     <string name="weekly_forecast">Weekly Forecast</string>
     <string name="blank_error">The city name can\'t be blank</string>
     <string name="try_again">Try again</string>
+    <string name="humidity"> Humidity</string>
+    <string name="wind">Wind</string>
+
 
     <!--Error handling-->
     <string name="fetch_location_failed">Fetch Location Failed</string>
